[package]
name = "librus_export"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
base64 = "0.22.0"
reqwest = { version = "0.12.4", features = ["blocking", "cookies"] }
serde = { version = "1.0.198", features = ["derive"]}
serde_json = "1.0.116"
