[package]
name = "librus_export"
version = "1.0.0"
edition = "2021"
license = "GPL-3.0"
authors = ["Wojtek Widomski"]
repository = "https://github.com/WojtekWidomski/librus_export"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
base64 = "0.22.0"
dialoguer = "0.11.0"
indicatif = "0.17.8"
reqwest = { version = "0.12.4", features = ["blocking", "cookies"] }
serde = { version = "1.0.198", features = ["derive"]}
serde_json = "1.0.116"
